--- a/campaign/templates/app/products/products.html
+++ b/campaign/templates/app/products/products.html
@@ -391,7 +391,8 @@ function saveSettings() {
     fetch(`/api/products/${currentProductId}/`, {
         method: method,
         headers: {
-            'Content-Type': 'application/json'
+            'Content-Type': 'application/json',
+            'X-CSRFToken': getCookie('csrftoken')
         },
         body: JSON.stringify(fullPayload)
     })
