commmented email account templates, urls

--- a/campaign/templates/components/nav.html
+++ b/campaign/templates/components/nav.html
@@ -20,13 +20,13 @@
         </li>
 
         <!-- Email Accounts -->
-        <li>
+        <!-- <li>
           <div class="tooltip tooltip-right" data-tip="Email Accounts">
-            <a href="{% url 'email_accounts' %}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
+            <a href="{# url 'email_accounts' #}" class="nav-link flex h-12 w-12 items-center justify-center rounded-lg text-gray-500 hover:bg-base-200 hover:text-blue-600 transition-all duration-200">
               <i class="fa-solid fa-at text-l"></i>
             </a>
           </div>
-        </li>
+        </li> -->
 
         <!-- Leads -->
         <li>
