--- a/campaign/templates/base-app.html
+++ b/campaign/templates/base-app.html
@@ -27,4 +27,25 @@
   <!-- Include Shared Modals for entire app -->
   {% include 'components/modals.html' %}
 
+
+
+<script>
+  // Helper function to get CSRF token
+function getCookie(name) {
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+</script>  
 {% endblock %}
+
+
